--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -3,29 +3,30 @@
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a & */
 
-@import url('https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,600;1,600&family=Molle&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Albert+Sans&family=Playwrite+IS:wght@100..400&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #076D7F   ;
+  --secondary-color: #245159 ;
+  --accent1-color: #e0f3f3;
+  --accent2-color: #f8f9f6;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: Molle;
+  --heading-font: "Playwrite IS", serif;
   --paragraph-font: "Albert Sans", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --headline-color-on-white: #076D7F;  /* headlines on a white background */ 
+  --headline-color-on-color: #f8f9f6; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #245159; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #f8f9f6; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #076d7f  ;
+  --nav-link-color: #076d7f;
+  --nav-background-color: #e0f3f3;
+  --nav-hover-link-color: #f8f9f6;
+  --nav-hover-background-color: #245159;
 }
 
 
