--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -32,9 +32,12 @@ nav a:hover {
 #hero-msg h1, #hero-msg h4{
     text-align: center;
 }
-.icon, .logo{
+.logo{
     width: 80px;
 }
+.icon{
+    width: 80px;
+} 
 .button-box{
     text-align: center;
 }
