--- a/Practice/styles/styles.css
+++ b/Practice/styles/styles.css
@@ -1,13 +1,18 @@
-body {text-align: center;}
+body {
+  text-align: center;
+  margin: 0
+}
 nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 25px;
   }
 a {
     color: white;
     margin: 40px;
+    padding: 25px;
   }
   h1 {
+    margin: 50px 0;
     color: steelblue;
   }
   img {
@@ -21,3 +26,8 @@ a {
     background-color: steelblue;
     color: white;
   }
+
+  footer p {
+    padding: 25px;
+  }
+
