--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,18 +1,25 @@
-div{
-    max-width: 1600px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Albert+Sans&family=Playwrite+IS:wght@100..400&display=swap');
+
 #content{
-    margin: 0 auto;  
+  margin: 0 auto;
+  max-width: 1600px;
 }
 #background{
     height: 725px;
     background-color: #245159;
 }
 body {
-    background-color: #F8F9F6; 
+    background-color: #F8F9F6;
+    font-family: "Albert Sans", Helvetica, sans-serif;
+    font-size:22px;
+    margin: 0;
+    padding: 0; 
 }
 header {
     background-color:#F8F9F6;
+}
+h2 {
+    margin: 0;
 }
 h4{
     color: #076D7F;
@@ -24,6 +31,7 @@ nav a{
     text-align: center;
     color: #076d7f;
     text-decoration: none;
+    padding: 35px;
 }
 nav a:hover {
     background-color: #245159;
@@ -35,8 +43,12 @@ nav a:hover {
 .logo{
     width: 80px;
 }
+#logo_link{
+    padding-top: 5px;
+}
 .icon{
     width: 80px;
+    padding-top: 10px;
 } 
 .button-box{
     text-align: center;
@@ -45,31 +57,53 @@ nav a:hover {
 main section{
     text-align: center;
 }
+main section img{
+    box-sizing: border-box;
+}
 .home-title{
     color:#245159;
+    font-family: "Playwrite IS", Garamond, serif;
+    font-size: 2em;
+    margin-top: 10px;
 }
 .book, .join{
     background-color:#e0f3f3;
     color: #245159;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover{
     background-color:#f8f9f6;
     color: #076D7F
  }
-
+ .rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
+}
+.card-img{
+    border:10px solid #076D7F;
+}
  .msg{
     background-color:#245159;
+    line-height: 1.5em;
+    padding: 35px;
 }
 .msg h2{
     color:#f8f9f6;
+    font-family: "Playwrite IS", Garamond, serif;
 }
 .msg p{
     color: #e0f3f3;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 footer{
     background-color:#F8F9F6;
-    color: #245159; 
+    color: #245159;
+    padding: 25px 50px;
+    margin-top: 200px; 
 }
 footer p {
     font-size: 1.2em;
@@ -86,3 +120,6 @@ footer a:hover {
 footer p a:hover {
     text-decoration: underline;
 } 
+footer .social img{
+    padding-top: 15px;
+}
