--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -16,6 +16,8 @@ body {
     padding: 0; 
 }
 header {
+    display: grid;
+    grid-template-columns: 150px auto;
     background-color:#F8F9F6;
 }
 h2 {
@@ -25,6 +27,8 @@ h4{
     color: #076D7F;
 }
 nav{
+    display: flex;
+    justify-content: space-around;
     background-color: #E0F3F3;
 }
 nav a{
@@ -37,14 +41,37 @@ nav a:hover {
     background-color: #245159;
     color: #f8f9f6;
 }
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-img {
+    width:100%;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
 #hero-msg h1, #hero-msg h4{
     text-align: center;
+    color: #E0F3F3;
 }
 .logo{
     width: 80px;
 }
 #logo_link{
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 .icon{
     width: 80px;
@@ -59,6 +86,10 @@ main section{
 }
 main section img{
     box-sizing: border-box;
+}
+.home-grid{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
 }
 .home-title{
     color:#245159;
@@ -84,11 +115,46 @@ main section img{
 }
 .card-img{
     border:10px solid #076D7F;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
 }
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+.card-img, .mountains {
+    width: 100%;
+}
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+#background{
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+.mountains{
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
  .msg{
     background-color:#245159;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 .msg h2{
     color:#f8f9f6;
@@ -102,8 +168,12 @@ main section img{
 footer{
     background-color:#F8F9F6;
     color: #245159;
+    background-color: #E0F3F3;
     padding: 25px 50px;
     margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer p {
     font-size: 1.2em;
@@ -122,4 +192,48 @@ footer p a:hover {
 } 
 footer .social img{
     padding-top: 15px;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
