--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -64,6 +64,7 @@ nav a:hover {
 #hero-msg h1, #hero-msg h4{
     text-align: center;
     color: #E0F3F3;
+    text-shadow: 2px 2px 2px #000000;
 }
 .logo{
     width: 80px;
@@ -91,6 +92,7 @@ main section img{
     display: grid;
     grid-template-columns: repeat(10, 1fr);
 }
+
 .home-title{
     color:#245159;
     font-family: "Playwrite IS", Garamond, serif;
@@ -118,11 +120,11 @@ main section img{
     transition: transform .5s;
     box-shadow: 5px 5px 10px #6f7364;
 }
-.card-img:hover {
+.card-img:hover, .trip-card-img:hover {
     opacity: .6;
     transform: scale(1.1);
 }
-.card-img, .mountains {
+.card-img, .trip-card-img, .mountains {
     width: 100%;
 }
 .rivers-card {
@@ -141,7 +143,7 @@ main section img{
     grid-column: 1/11;
     grid-row: 4/9;
 }
-.mountains{
+.mountains {
     width: 100%;
     grid-column: 2/7;
     grid-row: 5/8;
@@ -160,6 +162,7 @@ main section img{
     color:#f8f9f6;
     font-family: "Playwrite IS", Garamond, serif;
 }
+
 .msg p{
     color: #e0f3f3;
     font-size: .8em;
@@ -236,4 +239,153 @@ footer .social img{
     footer {
         margin-top: 25px;
     }
+}
+
+#trips-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 150px;
+}
+
+.trips-title {
+    font-family: "Playwrite IS", Garamond, serif;
+    font-size: 3em;
+    margin-top: 10px;
+}
+
+#trips-msg h1, #trips-msg h4{
+    text-align: center;
+    color:#F8F9F6;
+    text-shadow: 2px 2px 2px #000000;
+}
+
+.trips-grid{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+
+.pricing-title{
+    color:#245159;
+    font-family: "Playwrite IS", Garamond, serif;
+    font-size: 1.5em;
+    margin-top: 10px;
+    grid-column: 4/8;
+}
+
+.grand_canyon-card, .salmon_river-card, .desolation-card{
+   margin: 50px 0;
+}
+.trip-card-img{
+   border:10px solid #076D7F;
+   height: 200px;
+}
+
+.grand_canyon-card {
+   border:10px solid #076D7F;
+   transition: transform .5s;
+   box-shadow: 5px 5px 10px #6f7364;
+   grid-column: 2/4;
+   grid-row: 2/3;
+}
+
+.grand_canyon-card h3, h2{
+    color:#245159;
+    font-family: "Playwrite IS", Garamond, serif;
+    font-size: 1.5em; 
+    padding: 10px 0px;
+}
+.salmon_river-card {
+    border:10px solid #076D7F;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+   grid-column: 5/7;
+   grid-row: 2/3;
+}
+
+.salmon_river-card h3, h2{
+    color:#245159;
+    font-family: "Playwrite IS", Garamond, serif;
+    font-size: 1.5em;
+    padding: 10px 0px; 
+}
+.desolation-card {
+    border:10px solid #076D7F;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+   grid-column: 8/10;
+   grid-row: 2/3;
+}
+
+.desolation-card h3, h2{
+    color:#245159;
+    font-family: "Playwrite IS", Garamond, serif;
+    font-size: 1.5em; 
+    padding: 10px 0px;
+}
+
+main ul {
+    display: block;
+    list-style-type: none;
+    margin-top: 1em;
+    margin-bottom: 1 em;
+    margin-left: 0;
+    margin-right: 50px;
+    padding-left: 40px;
+}
+#deluxe_background {
+    height: 1225px;
+    background-color: #245159;
+    grid-column: 1/11;
+    grid-row: 4/10;
+}
+.deluxe_title {
+    z-index: 1;
+    color:#e0f3f3;
+    font-family: "Playwrite IS", Garamond, serif;
+    font-size: 1.5em;
+    text-align: center;
+    grid-column: 4/8;
+    grid-row: 4;
+}
+.deluxe {
+    width: 100%;
+    grid-column: 2/6;
+    grid-row: 6/9;
+    
+}
+.dlx_msg{
+    background-color:#245159;
+    text-align: left;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 2/6;
+    grid-row: 5/6;
+    
+}
+.dlx_msg h2{
+    color:#f8f9f6;
+    font-family: "Playwrite IS", Garamond, serif;
+    margin-bottom: 40px;
+}
+.dlx_msg h3{
+    color:#e0f3f3;
+}
+
+.dlx_msg p{
+    color: #e0f3f3;
+    font-size: .8em;
+    padding-bottom: 15px;
+}
+
+.dlx-details {
+    background-color:#076D7F;
+    color: #e0f3f3;
+    font-size: 1em;
+    text-align: left;
+    line-height: 1.8em;
+    padding: 35px;
+    margin:0px 50px;
+    grid-column: 6/10;
+    grid-row: 5/9;
+    box-shadow: 5px 5px 10px #6f7364;
 }
