--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -197,6 +197,7 @@ footer .social img{
     padding-top: 15px;
 }
 
+ /* contact_us css starts here*/
 .form {
     text-align: center;
 }
@@ -207,18 +208,18 @@ form {
     padding: 1em;
     border: 1px solid #ccc;
     border-radius: 1em;
-  }
+}
 
 .form p + p {
     margin-top: 1em;
-  }
+}
 
 label {
     /* Uniform size & alignment */
     display: inline-block;
     min-width: 90px;
     text-align: right;
-  }
+}
 
 input,
 textarea {
@@ -230,7 +231,7 @@ textarea {
     box-sizing: border-box;
     /* Match form field borders */
     border: 1px solid #999;
-  }
+}
   
 input:focus,
 textarea:focus {
@@ -238,25 +239,25 @@ textarea:focus {
     outline-style: solid;
     /* To give a little highlight on active elements */
     outline-color: #000;
-  }
+}
   
 textarea {
     /* Align multiline text fields with their labels */
     vertical-align: top;
     /* Provide space to type some text */
     height: 5em;
-  }
+}
   
 .button {
     /* Align buttons with the text fields */
     padding-left: 90px; /* same size as the label elements */
-  }
+}
   
 button {
     /* This extra margin represent roughly the same space as the space
        between the labels and their text fields */
     margin-left: 0.5em;
-  }  
+}  
 
 #feedback {
     background-color: antiquewhite;
