Personal Site Update

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -197,7 +197,7 @@ footer .social img{
     padding-top: 15px;
 }
 
- /* contact_us css starts here*/
+ /* contact us css starts here*/
 .form {
     text-align: center;
 }
