--- a/ForeverYoung/styles/style.css
+++ b/ForeverYoung/styles/style.css
@@ -258,7 +258,7 @@ footer .social img{
 }
 
 footer .social a:hover{
-    background-color:#625745;
+    background-color:#948D7C;
 }
 
  /* CONTACT FORM*/
