--- a/ForeverYoung/styles/style.css
+++ b/ForeverYoung/styles/style.css
@@ -257,7 +257,7 @@ footer .social img{
     padding: 15px 5px 5px 40px;
 }
 
-footer .social a:hover{
+.social a:hover{
     background-color:#948D7C;
 }
 
