--- a/ForeverYoung/styles/style.css
+++ b/ForeverYoung/styles/style.css
@@ -42,7 +42,6 @@ nav a:hover {
     background-color: #625745;
 }
 
-
 main {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -116,7 +115,6 @@ main section.profile h1{
 }
 
 main section.profile p{
-
     color: #DEDACE;
 }
 
@@ -167,6 +165,7 @@ main section .profile-img{
     float: left;
     padding:15px;
 }
+
 .button-box{
     text-align: center;
     margin-top:100px;
@@ -185,6 +184,69 @@ main section .profile-img{
 .action:hover{
     background-color:#DEDACE;
     color: #625745
+}
+
+.overlay{
+    position: relative;
+    width: 50%;
+}
+
+.button {
+    opacity: 1;
+    display: block;
+    width: 120%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.overlay:hover .image{
+    opacity: 0.3;
+}
+  
+.overlay:hover .middle {
+    opacity: 1;
+  }
+  
+.image {
+    background-color: #625745;
+    color: #DEDACE;
+    font-size: 16px;
+    padding: 16px 32px;
+}
+div a {
+    text-decoration: none;
+    color: #DEDACE;
+}
+
+div a:hover{
+    color: #625745
+}
+
+.book-button{
+    background-color:#625745;
+    color: #DEDACE;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin: 50px;
+    border-radius: 5px;
+}
+
+.book-button:hover{
+background-color:#DEDACE;
+color: #625745
 }
 
 .research-card{
